--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "ostream": "cpp",
-        "xstring": "cpp",
-        "iosfwd": "cpp",
-        "new": "cpp",
-        "stack": "cpp"
-    }
+  "files.associations": {
+    "iostream": "cpp",
+    "ostream": "cpp",
+    "xstring": "cpp",
+    "iosfwd": "cpp",
+    "new": "cpp",
+    "stack": "cpp",
+    "xutility": "cpp"
+  }
 }
