--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     "iosfwd": "cpp",
     "new": "cpp",
     "stack": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "istream": "cpp",
+    "string": "cpp"
   }
 }
