--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "deque": "cpp",
     "list": "cpp",
     "xiosbase": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "cmath": "cpp"
   }
 }
