--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,19 @@
     "xtr1common": "cpp",
     "xtree": "cpp",
     "*.tcc": "cpp",
-    "unordered_map": "cpp"
+    "unordered_map": "cpp",
+    "array": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cstdarg": "cpp",
+    "cwctype": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory_resource": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "string_view": "cpp"
   }
 }
